working on hiding ticket

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -78,9 +78,14 @@ body {
 			transition: box-shadow .2s ease-in-out;
 			position: relative;
 
-			&:hover {
+			&:hover  {
 				box-shadow: 0 2px 6px 1px #d3d7da;
 			}
+
+			&:hover  .hide {
+				display: block;
+			}
+			
 
 			.title {
 				margin: 15px 0;
@@ -88,6 +93,17 @@ body {
 				font-weight: 400;
 				font-style: normal;
 				color: #20455e;
+			}
+
+			.hide{
+				padding-left: 93%;
+				display: none;
+			}
+			.showLess {
+				color: #7a92a5;
+				font-size: 12px;
+				margin: 10px 0;
+				flex-shrink: 0;
 			}
 			
 			footer {
