--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -121,6 +121,23 @@ body {
 				margin: 10px 0;
 				flex-shrink: 0;
 			}
+			.tags{
+			overflow: auto;
+			}
+			.label{
+				border-radius: 4px;
+				font-size: 14px;
+				background-color:#f5f9fc;
+				border: 1px solid #3899ec ;
+				// border-color: #3899ec;
+				color: #20455e;
+				width: fit-content;
+				padding: 2px 7px 3px 7px;
+				float: right;
+    			margin: 0 8px 8px 0;
+				
+			}
+
 			
 			footer {
 
